fix: server style